css/style.css
html {
    height: 100%;
    box-sizing: border-box;
    
  }
  
  *,
  *:before,
  *:after {
    box-sizing: inherit;
  }

  body {
    font-family: 'Aller_Bd', sans-serif;
    position: relative;
    margin: 0;
    padding-bottom: 6rem;
    min-height: 100%;
    background: whitesmoke;
    padding-bottom: 80px;
    overflow-x:hidden /* remove extra width / scroll */
  }

  #navBar {
    font-size: 1.2rem;
    background-color: white ;
    height: 65px;
  }

  #navBar .navbar-collapse,
#navBar .navbar-toggler {
    background-color: white ;
}

#navBar .active {
  font-weight: bold;
}

#carouselBtn {
  background-color: #8295d3;
}

.carousel-item img {
  width: 100px;
  height: 500px;
}




/* Initial state of the image */
.flow-in-left {
  opacity: 0;
  transform: translateX(50px); /* Adjust as needed for the desired effect */
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

/* Final state of the image when it becomes visible */
.flow-in-left.active {
  opacity: 1;
  transform: translateX(0);
}


/* Initial state of the image */
.flow-in-up {
  opacity: 0;
  transform: translateY(100px); /* Adjust as needed for the desired effect */
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

/* Final state of the image when it becomes visible */
.flow-in-up.active {
  opacity: 1;
  transform: translateY(0);
}


/* Initial state of the image */
.flow-in-down {
  opacity: 0;
  transform: translateY(-100px); /* Adjust as needed for the desired effect */
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

/* Final state of the image when it becomes visible */
.flow-in-down.active {
  opacity: 1;
  transform: translateY(0);
}

/* Initial state of the image */
.flow-in-diagonal {
  opacity: 0;
  transform: translate(-100px, 100px); /* Adjust as needed for the desired effect */
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

/* Final state of the image when it becomes visible */
.flow-in-diagonal.active {
  opacity: 1;
  transform: translateY(0);
}




.max-width-50{
  max-width: 50%;
}

.max-height-50{
  max-height: 50%;
}

/* .counter-widget {
  text-align: center;
  background: #ffffff;
  border-radius: 8px;
  padding: 20px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

#counter {
  font-size: 48px;
  color: #4caf50;
} */


.footer {
  background: #6a549c;
  position: absolute;
  width: 100%;
}



@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_Rg.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}



.test {
  font-family: 'Aller', sans-serif;
  font-weight: bold;
  font-size: 2em;

}


@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_Rg.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_Bd.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_It.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_BdIt.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/AllerDisplay.ttf') format('truetype');
  font-weight: 900;
  /* Extra-bold or display weight */
  font-style: normal;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_Lt.ttf') format('truetype');
  font-weight: 300;
  /* Light weight */
  font-style: normal;
}

@font-face {
  font-family: 'Aller';
  src: url('./fonts/Aller_LtIt.ttf') format('truetype');
  font-weight: 300;
  font-style: italic;
}

